# kairix-backend

./: .gitignore  .python-version  README.md  TECHNICAL_DOCUMENTATION.md  TODO.md  pyproject.toml  requirements.txt  system-install.sh
app/: __init__.py  config.py  models.py  routes.py
app/routes/: agents.py  conversations.py  messages.py  users.py
app/services/: memory_provider.py  openai_service.py
scripts/: install_dep.sh  run_local.sh  run_tests.sh
tests/: conftest.py
tests/e2e/: test_e2e_agent_flow.py  test_e2e_conversation_flow.py  test_e2e_setup.py  test_e2e_user_flow.py
tests/models/: test_memory.py
tests/routes/: test_agents.py  test_conversation.py  test_messages.py  test_users.py
tests/services/: test_memory_provider.py  test_openai_service.py
